# CFDQt

./: .gitignore  CFD methods.md  CFD thermal neutrons.md  CMakeLists.txt  README.md  gui.pro
DATA/: H1-elastic-scattering-cross-section.txt  H1-elatic-scattering-cross-section.txt  H1-total-cross-section.txt  H2O.csv  O16-elastic-scattering-DA.txt  O16-elastic-scattering-PDF.txt  O16-elastic-scattering-cross-section.txt  O16-elatic-scattering-cross-section.txt  O16-total-cross-section.txt  Untitled-1.nb  checkInverseCDFTable.py  checkPDFTable.py  getInverseCDFTable.py  getPDFTable.py  getPDFTable2.py  legendretest.py  plotDA.py  thermalneutroncrosssection.nb
DATA/inelastic-unused/: O16-nonelatic-scattering-cross-section.txt
Examples/: CMakeLists.txt  compare.cpp  gamma.cpp  gammaSim  neutron.cpp  neutronSim  run.bat  run.sh  runGamma.sh  runNeutron.sh
Examples/output_gamma/: compare.py  outq  singleDet.i  tally.txt
Examples/output_neutron/: Cf252.i  outq  tally.txt
Headers/: cell.h  cfd.h  data.h  geometry.h  material.h  tracking.h
Sources/: CMakeLists.txt  cell.cpp  cfd.cpp  data.cpp  geometry.cpp  main.cpp  material.cpp  tracking.cpp
Test/: CMakeLists.txt  cellTest.cpp  dataTest.cpp  geometryTest.cpp  materialTest.cpp  vector3Dtest.cpp
cfdqt/: cfdqt.pro  cfdworker.cpp  cfdworker.h  mainwindow.ui  plotcanvas.ui  resources.qrc
cfdqt/DATA/: H1-elastic-scattering-DA.txt  H2O.csv  O16-elastic-scattering-CDF.txt
cfdqt/DATA/inelastic-unused/: H1-nonelatic-scattering-cross-section.txt
cfdqt/Examples/: gamma.cpp  neutron.cpp  runNeutron.sh
cfdqt/Examples/output_neutron/: compare.py
cfdqt/Headers/: cell.h  cfd.h  customplotzoom.h  data.h  geometry.h  mainwindow.h  material.h  qcustomcanvas.h  rng.h  tracking.h
cfdqt/Sources/: CMakeLists.txt  cell.cpp  cfd.cpp  customplotzoom.cpp  data.cpp  main.cpp  mainwindow.cpp  qcustomcanvas.cpp  tracking.cpp
cfdqt/Test/: cellTest.cpp  materialTest.cpp
lib/: libqt3dwidget.so.2.0.0
